--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -11527,7 +11527,7 @@ Test&lt;/b&gt;</property>
         <child>
           <widget class="GtkTable" id="table42">
             <property name="visible">True</property>
-            <property name="n_rows">15</property>
+            <property name="n_rows">16</property>
             <property name="n_columns">2</property>
             <property name="column_spacing">4</property>
             <property name="row_spacing">2</property>
@@ -11863,8 +11863,8 @@ Test&lt;/b&gt;</property>
               <packing>
                 <property name="left_attach">1</property>
                 <property name="right_attach">2</property>
-                <property name="top_attach">14</property>
-                <property name="bottom_attach">15</property>
+                <property name="top_attach">15</property>
+                <property name="bottom_attach">16</property>
                 <property name="y_options"></property>
               </packing>
             </child>
@@ -11876,8 +11876,8 @@ Test&lt;/b&gt;</property>
 comments</property>
               </widget>
               <packing>
-                <property name="top_attach">14</property>
-                <property name="bottom_attach">15</property>
+                <property name="top_attach">15</property>
+                <property name="bottom_attach">16</property>
                 <property name="x_options">GTK_FILL</property>
                 <property name="y_options"></property>
               </packing>
@@ -11933,8 +11933,8 @@ comments</property>
               <packing>
                 <property name="left_attach">1</property>
                 <property name="right_attach">2</property>
-                <property name="top_attach">13</property>
-                <property name="bottom_attach">14</property>
+                <property name="top_attach">14</property>
+                <property name="bottom_attach">15</property>
                 <property name="x_options">GTK_FILL</property>
               </packing>
             </child>
@@ -11945,8 +11945,8 @@ comments</property>
                 <property name="label" translatable="yes">Mistakes</property>
               </widget>
               <packing>
-                <property name="top_attach">13</property>
-                <property name="bottom_attach">14</property>
+                <property name="top_attach">14</property>
+                <property name="bottom_attach">15</property>
                 <property name="x_options">GTK_FILL</property>
                 <property name="y_options"></property>
               </packing>
@@ -11956,6 +11956,70 @@ comments</property>
             </child>
             <child>
               <placeholder/>
+            </child>
+            <child>
+              <widget class="GtkLabel" id="label_video">
+                <property name="visible">True</property>
+                <property name="xalign">0</property>
+                <property name="label" translatable="yes">Video available</property>
+              </widget>
+              <packing>
+                <property name="top_attach">13</property>
+                <property name="bottom_attach">14</property>
+                <property name="x_options">GTK_FILL</property>
+                <property name="y_options"></property>
+              </packing>
+            </child>
+            <child>
+              <widget class="GtkHBox" id="hbox1">
+                <property name="visible">True</property>
+                <child>
+                  <widget class="GtkHBox" id="hbox2">
+                    <property name="visible">True</property>
+                    <child>
+                      <widget class="GtkLabel" id="label_video_yes">
+                        <property name="visible">True</property>
+                        <property name="xalign">0</property>
+                        <property name="label" translatable="yes">Yes</property>
+                      </widget>
+                      <packing>
+                        <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <widget class="GtkLabel" id="label_video_no">
+                        <property name="visible">True</property>
+                        <property name="xalign">0</property>
+                        <property name="label" translatable="yes">No</property>
+                      </widget>
+                      <packing>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
+                  </widget>
+                  <packing>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <widget class="GtkButton" id="button_video_watch">
+                    <property name="label" translatable="yes">watch video</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">True</property>
+                    <signal name="clicked" handler="on_button_video_watch_clicked"/>
+                  </widget>
+                  <packing>
+                    <property name="position">1</property>
+                  </packing>
+                </child>
+              </widget>
+              <packing>
+                <property name="left_attach">1</property>
+                <property name="right_attach">2</property>
+                <property name="top_attach">13</property>
+                <property name="bottom_attach">14</property>
+              </packing>
             </child>
           </widget>
           <packing>
