--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -11951,12 +11951,6 @@ comments</property>
               </packing>
             </child>
             <child>
-              <placeholder/>
-            </child>
-            <child>
-              <placeholder/>
-            </child>
-            <child>
               <widget class="GtkLabel" id="label_video">
                 <property name="visible">True</property>
                 <property name="xalign">0</property>
@@ -12002,7 +11996,7 @@ comments</property>
                 </child>
                 <child>
                   <widget class="GtkButton" id="button_video_watch">
-                    <property name="label" translatable="yes">watch video</property>
+                    <property name="label" translatable="yes">Play video</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
@@ -12019,6 +12013,12 @@ comments</property>
                 <property name="top_attach">13</property>
                 <property name="bottom_attach">14</property>
               </packing>
+            </child>
+            <child>
+              <placeholder/>
+            </child>
+            <child>
+              <placeholder/>
             </child>
           </widget>
           <packing>
@@ -18654,6 +18654,29 @@ by you</property>
                                   </packing>
                                 </child>
                                 <child>
+                                  <widget class="GtkButton" id="button_video_play_selected_jump">
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">True</property>
+                                    <property name="receives_default">True</property>
+                                    <property name="has_tooltip">True</property>
+                                    <property name="tooltip" translatable="yes">Play Video (v)</property>
+                                    <signal name="clicked" handler="on_video_play_selected_jump_clicked"/>
+                                    <accelerator key="v" signal="clicked"/>
+                                    <child>
+                                      <widget class="GtkImage" id="image45">
+                                        <property name="visible">True</property>
+                                        <property name="stock">gtk-media-play</property>
+                                        <property name="icon-size">1</property>
+                                      </widget>
+                                    </child>
+                                  </widget>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="fill">False</property>
+                                    <property name="position">2</property>
+                                  </packing>
+                                </child>
+                                <child>
                                   <widget class="GtkButton" id="button_delete_selected_jump">
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
@@ -18670,7 +18693,7 @@ by you</property>
                                   <packing>
                                     <property name="expand">False</property>
                                     <property name="fill">False</property>
-                                    <property name="position">2</property>
+                                    <property name="position">3</property>
                                   </packing>
                                 </child>
                               </widget>
