doing jump subtraction stats

--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -3692,7 +3692,7 @@ options</property>
               <widget class="GtkTable" id="table44">
                 <property name="visible">True</property>
                 <property name="border_width">6</property>
-                <property name="n_rows">4</property>
+                <property name="n_rows">5</property>
                 <property name="n_columns">2</property>
                 <property name="column_spacing">10</property>
                 <property name="row_spacing">8</property>
@@ -3752,7 +3752,7 @@ options</property>
                   </packing>
                 </child>
                 <child>
-                  <widget class="GtkLabel" id="label162">
+                  <widget class="GtkLabel" id="label_apply_to">
                     <property name="visible">True</property>
                     <property name="xalign">0</property>
                     <property name="label" translatable="yes">Apply to</property>
@@ -3829,6 +3829,70 @@ options</property>
                 </child>
                 <child>
                   <placeholder/>
+                </child>
+                <child>
+                  <widget class="GtkHBox" id="hbox_subtraction_between">
+                    <property name="visible">True</property>
+                    <child>
+                      <widget class="GtkHBox" id="hbox_subtraction_between_1">
+                        <property name="visible">True</property>
+                        <child>
+                          <placeholder/>
+                        </child>
+                      </widget>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <widget class="GtkLabel" id="label1">
+                        <property name="visible">True</property>
+                        <property name="label" translatable="yes">and</property>
+                        <property name="use_markup">True</property>
+                      </widget>
+                      <packing>
+                        <property name="fill">False</property>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <widget class="GtkHBox" id="hbox_subtraction_between_2">
+                        <property name="visible">True</property>
+                        <child>
+                          <placeholder/>
+                        </child>
+                      </widget>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="position">2</property>
+                      </packing>
+                    </child>
+                  </widget>
+                  <packing>
+                    <property name="left_attach">1</property>
+                    <property name="right_attach">2</property>
+                    <property name="top_attach">4</property>
+                    <property name="bottom_attach">5</property>
+                    <property name="x_options">GTK_FILL</property>
+                    <property name="y_options"></property>
+                  </packing>
+                </child>
+                <child>
+                  <widget class="GtkLabel" id="label_subtraction_between">
+                    <property name="visible">True</property>
+                    <property name="xalign">0</property>
+                    <property name="label" translatable="yes">Subtraction between</property>
+                    <property name="use_markup">True</property>
+                  </widget>
+                  <packing>
+                    <property name="top_attach">4</property>
+                    <property name="bottom_attach">5</property>
+                    <property name="x_options">GTK_FILL</property>
+                    <property name="y_options"></property>
+                  </packing>
                 </child>
               </widget>
               <packing>
