--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -3828,11 +3828,9 @@ options</property>
                   </packing>
                 </child>
                 <child>
-                  <placeholder/>
-                </child>
-                <child>
                   <widget class="GtkHBox" id="hbox_subtraction_between">
                     <property name="visible">True</property>
+                    <property name="spacing">8</property>
                     <child>
                       <widget class="GtkHBox" id="hbox_subtraction_between_1">
                         <property name="visible">True</property>
@@ -3853,6 +3851,7 @@ options</property>
                         <property name="use_markup">True</property>
                       </widget>
                       <packing>
+                        <property name="expand">False</property>
                         <property name="fill">False</property>
                         <property name="position">1</property>
                       </packing>
@@ -3876,7 +3875,6 @@ options</property>
                     <property name="right_attach">2</property>
                     <property name="top_attach">4</property>
                     <property name="bottom_attach">5</property>
-                    <property name="x_options">GTK_FILL</property>
                     <property name="y_options"></property>
                   </packing>
                 </child>
@@ -3893,6 +3891,9 @@ options</property>
                     <property name="x_options">GTK_FILL</property>
                     <property name="y_options"></property>
                   </packing>
+                </child>
+                <child>
+                  <placeholder/>
                 </child>
               </widget>
               <packing>
