--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -2628,6 +2628,7 @@ weight</property>
           </widget>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">False</property>
             <property name="position">1</property>
           </packing>
         </child>
@@ -2670,6 +2671,7 @@ weight</property>
           </widget>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">False</property>
             <property name="position">2</property>
           </packing>
         </child>
