--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -2690,41 +2690,50 @@ weight</property>
         <property name="visible">True</property>
         <property name="spacing">10</property>
         <child>
-          <widget class="GtkLabel" id="label1">
+          <widget class="GtkVBox" id="vbox1">
             <property name="visible">True</property>
-            <property name="use_markup">True</property>
-            <property name="justify">center</property>
+            <property name="spacing">4</property>
+            <child>
+              <widget class="GtkLabel" id="label1">
+                <property name="visible">True</property>
+                <property name="use_markup">True</property>
+                <property name="justify">center</property>
+              </widget>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <widget class="GtkLabel" id="label_link">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="use_markup">True</property>
+                <property name="justify">center</property>
+                <property name="selectable">True</property>
+              </widget>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
+            <child>
+              <widget class="GtkLabel" id="label_question">
+                <property name="visible">True</property>
+                <property name="use_markup">True</property>
+                <property name="justify">center</property>
+              </widget>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">2</property>
+              </packing>
+            </child>
           </widget>
           <packing>
-            <property name="expand">False</property>
-            <property name="fill">False</property>
-            <property name="position">0</property>
-          </packing>
-        </child>
-        <child>
-          <widget class="GtkLabel" id="label_link">
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="use_markup">True</property>
-            <property name="justify">center</property>
-            <property name="selectable">True</property>
-          </widget>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">False</property>
             <property name="position">1</property>
-          </packing>
-        </child>
-        <child>
-          <widget class="GtkLabel" id="label_question">
-            <property name="visible">True</property>
-            <property name="use_markup">True</property>
-            <property name="justify">center</property>
-          </widget>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">False</property>
-            <property name="position">2</property>
           </packing>
         </child>
         <child>
@@ -2769,7 +2778,7 @@ weight</property>
             <property name="expand">False</property>
             <property name="fill">False</property>
             <property name="pack_type">end</property>
-            <property name="position">3</property>
+            <property name="position">0</property>
           </packing>
         </child>
       </widget>
